// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Morphine Integration Test parses morphine 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 3,
          "size": 7,
          "substitutions": {
            "6": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 4,
          "ringNumber": 4,
          "size": 9,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 5,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Morphine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6 });
export const v3 = v2.substitute(1, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, bonds: [null, null, null, null, '=', null] });
export const v5 = Ring({ atoms: 'C', size: 7, ringNumber: 3, offset: 3 });
export const v6 = v5.substitute(6, 'O');
export const v7 = Ring({ atoms: 'C', size: 9, ringNumber: 4, offset: 4, bonds: [null, null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 0, 0, 0, 0, 1, 1] });
export const v8 = v7.substitute(5, 'O');
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 5, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 2, 2] });
export const v10 = FusedRing([v3, v4, v6, v8, v9], { metadata: { ringMetadata: [{ positions: [1, 2, 3, 4, 5, 6], start: 1, end: 6 }, { positions: [4, 5, 6, 7, 8, 9], start: 4, end: 9 }, { positions: [4, 5, 6, 7, 8, 15, 16], start: 4, end: 16 }, { positions: [5, 6, 7, 8, 15, 16, 17, 18, 19], start: 5, end: 19 }, { positions: [8, 9, 10, 11, 12, 13], start: 8, end: 13 }], allPositions: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19], branchDepthMap: new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 1], [12, 2], [13, 2], [14, 1], [15, 0], [16, 0], [17, 0], [18, 1], [19, 1]]), atomValueMap: new Map([[1, 'N'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'O'], [15, 'O'], [16, 'C'], [17, 'C'], [18, 'C'], [19, 'C']]), bondMap: new Map([[9, '='], [11, '='], [13, '='], [19, '=']]), ringOrderMap: new Map([[1, [1, 1]], [2, [1]], [3, [1]], [4, [2, 3, 1, 2, 3]], [5, [4, 1, 2, 3, 4]], [6, [1, 2, 3, 4]], [7, [2, 3, 4]], [8, [5, 2, 5, 3, 4]], [9, [2, 5]], [10, [5]], [11, [5]], [12, [5]], [13, [5]], [15, [3, 4]], [16, [3, 4]], [17, [4]], [18, [4]], [19, [4]]]) } });
export const v11 = Linear(['O']);
export const v12 = Molecule([v1, v10, v11]);"
`;

exports[`Codeine Integration Test parses codeine 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 3,
          "size": 7,
          "substitutions": {
            "6": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 4,
          "ringNumber": 4,
          "size": 9,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 5,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Codeine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6 });
export const v3 = v2.substitute(1, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, bonds: [null, null, null, null, '=', null] });
export const v5 = Ring({ atoms: 'C', size: 7, ringNumber: 3, offset: 3 });
export const v6 = v5.substitute(6, 'O');
export const v7 = Ring({ atoms: 'C', size: 9, ringNumber: 4, offset: 4, bonds: [null, null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 0, 0, 0, 0, 1, 1] });
export const v8 = v7.substitute(5, 'O');
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 5, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 2, 2] });
export const v10 = FusedRing([v3, v4, v6, v8, v9], { metadata: { ringMetadata: [{ positions: [1, 2, 3, 4, 5, 6], start: 1, end: 6 }, { positions: [4, 5, 6, 7, 8, 9], start: 4, end: 9 }, { positions: [4, 5, 6, 7, 8, 16, 17], start: 4, end: 17 }, { positions: [5, 6, 7, 8, 16, 17, 18, 19, 20], start: 5, end: 20 }, { positions: [8, 9, 10, 11, 12, 13], start: 8, end: 13 }], allPositions: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], branchDepthMap: new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 1], [12, 2], [13, 2], [14, 1], [15, 1], [16, 0], [17, 0], [18, 0], [19, 1], [20, 1]]), atomValueMap: new Map([[1, 'N'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'O'], [15, 'C'], [16, 'O'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C']]), bondMap: new Map([[9, '='], [11, '='], [13, '='], [20, '=']]), ringOrderMap: new Map([[1, [1, 1]], [2, [1]], [3, [1]], [4, [2, 3, 1, 2, 3]], [5, [4, 1, 2, 3, 4]], [6, [1, 2, 3, 4]], [7, [2, 3, 4]], [8, [5, 2, 5, 3, 4]], [9, [2, 5]], [10, [5]], [11, [5]], [12, [5]], [13, [5]], [16, [3, 4]], [17, [3, 4]], [18, [4]], [19, [4]], [20, [4]]]) } });
export const v11 = Linear(['O']);
export const v12 = Molecule([v1, v10, v11]);"
`;

exports[`Oxycodone Integration Test parses oxycodone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 3,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "2": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 4,
          "size": 11,
          "substitutions": {
            "11": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 5,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Oxycodone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, branchDepths: [0, 0, 0, 0, 0, 1] });
export const v3 = v2.substitute(1, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3 });
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(3, v5);
export const v7 = Ring({ atoms: 'C', size: 10, ringNumber: 3, offset: 3, bonds: [null, null, null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 0, 0, 0, 1, 1, 1, 1] });
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(3, v8, { sibling: true });
export const v10 = Ring({ atoms: 'C', size: 11, ringNumber: 4, offset: 4, bonds: [null, null, null, null, null, null, null, '=', null, null, null], branchDepths: [0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1] });
export const v11 = v10.substitute(11, 'O');
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(2, v12, { sibling: true });
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 5, bonds: ['=', null, '=', null, '=', null], branchDepths: [1, 1, 1, 2, 3, 3] });
export const v15 = FusedRing([v3, v6, v9, v13, v14], { metadata: { ringMetadata: [{ positions: [1, 2, 3, 4, 10, 11], start: 1, end: 11 }, { positions: [4, 5, 6, 8, 9, 10], start: 4, end: 10 }, { positions: [4, 5, 6, 8, 9, 10, 11, 12, 13, 14], start: 4, end: 14 }, { positions: [5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 21], start: 5, end: 21 }, { positions: [13, 14, 15, 16, 17, 18], start: 13, end: 18 }], allPositions: [1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21], branchDepthMap: new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [8, 0], [9, 0], [10, 0], [11, 1], [12, 1], [13, 1], [14, 1], [15, 1], [16, 2], [17, 3], [18, 3], [19, 2], [20, 2], [21, 1]]), atomValueMap: new Map([[1, 'N'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [18, 'C'], [19, 'O'], [20, 'C'], [21, 'O']]), bondMap: new Map([[14, '='], [16, '='], [18, '=']]), ringOrderMap: new Map([[1, [1, 1]], [2, [1]], [3, [1]], [4, [2, 3, 2, 1, 3]], [5, [4, 2, 3, 4]], [6, [2, 3, 4]], [8, [2, 3, 4]], [9, [2, 3, 4]], [10, [2, 1, 3, 4]], [11, [1, 3, 4]], [12, [3, 4]], [13, [5, 3, 5, 4]], [14, [3, 5, 4]], [15, [5, 4]], [16, [5]], [17, [5]], [18, [5]], [21, [4]]]) } });
export const v16 = Linear(['O']);
export const v17 = Molecule([v1, v15, v16]);"
`;

exports[`Hydrocodone Integration Test parses hydrocodone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 3,
          "size": 7,
          "substitutions": {
            "6": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "7": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 4,
          "size": 9,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 5,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Hydrocodone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6 });
export const v3 = v2.substitute(1, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, bonds: [null, null, null, null, '=', null] });
export const v5 = Ring({ atoms: 'C', size: 7, ringNumber: 3, offset: 3 });
export const v6 = v5.substitute(6, 'O');
export const v7 = Ring({ atoms: 'C', size: 9, ringNumber: 4, offset: 4 });
export const v8 = v7.substitute(5, 'O');
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(7, v9);
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 5, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 2, 2] });
export const v12 = FusedRing([v3, v4, v6, v10, v11], { metadata: { ringMetadata: [{ positions: [1, 2, 3, 4, 5, 6], start: 1, end: 6 }, { positions: [4, 5, 6, 7, 8, 9], start: 4, end: 9 }, { positions: [4, 5, 6, 7, 8, 16, 17], start: 4, end: 17 }, { positions: [5, 6, 7, 8, 16, 17, 18, 20, 21], start: 5, end: 21 }, { positions: [8, 9, 10, 11, 12, 13], start: 8, end: 13 }], allPositions: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 20, 21], branchDepthMap: new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 1], [12, 2], [13, 2], [14, 1], [15, 1], [16, 0], [17, 0], [18, 0], [20, 0], [21, 0]]), atomValueMap: new Map([[1, 'N'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'O'], [15, 'C'], [16, 'O'], [17, 'C'], [18, 'C'], [20, 'C'], [21, 'C']]), bondMap: new Map([[9, '='], [11, '='], [13, '=']]), ringOrderMap: new Map([[1, [1, 1]], [2, [1]], [3, [1]], [4, [2, 3, 1, 2, 3]], [5, [4, 1, 2, 3, 4]], [6, [1, 2, 3, 4]], [7, [2, 3, 4]], [8, [5, 2, 5, 3, 4]], [9, [2, 5]], [10, [5]], [11, [5]], [12, [5]], [13, [5]], [16, [3, 4]], [17, [3, 4]], [18, [4]], [20, [4]], [21, [4]]]) } });
export const v13 = Molecule([v1, v12]);"
`;

exports[`Fentanyl Integration Test parses fentanyl 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "N",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "components": [
              {
                "atoms": "C",
                "attachments": {},
                "bonds": [
                  null,
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "offset": 0,
                "ringNumber": 1,
                "size": 6,
                "substitutions": {
                  "4": "N",
                },
                "type": "ring",
              },
              {
                "atoms": [
                  "C",
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
              {
                "atoms": "C",
                "attachments": {},
                "bonds": [
                  "=",
                  null,
                  "=",
                  null,
                  "=",
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
            ],
            "type": "molecule",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fentanyl Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'N']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(3, v2);
export const v4 = Ring({ atoms: 'C', size: 6, branchDepths: [1, 1, 1, 1, 2, 2] });
export const v5 = v4.substitute(4, 'N');
export const v6 = Linear(['C', 'C']);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
export const v8 = Molecule([v5, v6, v7]);
export const v9 = v3.attach(4, v8);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v11 = Molecule([v9, v10]);"
`;

exports[`Tramadol Integration Test parses tramadol 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "6": [
          {
            "components": [
              {
                "atoms": "C",
                "attachments": {},
                "bonds": [
                  "=",
                  null,
                  "=",
                  null,
                  "=",
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
              {
                "atoms": [
                  "O",
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "type": "molecule",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Tramadol Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'C', size: 6 });
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null], branchDepths: [1, 1, 1, 2, 2, 2] });
export const v6 = Linear(['O', 'C']);
export const v7 = Molecule([v5, v6]);
export const v8 = v4.attach(6, v7);
export const v9 = Linear(['O']);
export const v10 = Molecule([v3, v8, v9]);"
`;

exports[`Methadone Integration Test parses methadone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "C",
              "C",
              "N",
              "C",
            ],
            "attachments": {
              "2": [
                {
                  "atoms": [
                    "C",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
              "3": [
                {
                  "atoms": [
                    "C",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": "C",
            "attachments": {},
            "bonds": [
              "=",
              null,
              "=",
              null,
              "=",
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Methadone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(3, v2);
export const v4 = Linear(['C', 'C', 'N', 'C']);
export const v5 = Linear(['C']);
export const v6 = v4.attach(2, v5);
export const v7 = Linear(['C']);
export const v8 = v6.attach(3, v7);
export const v9 = v3.attach(4, v8);
export const v10 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v11 = v9.attach(4, v10);
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
export const v13 = Molecule([v11, v12]);"
`;
